--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "core-js": "^3.6.4",
     "js-base64": "^2.5.2",
     "js-cookie": "^2.2.1",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "vant": "^2.9.2",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-ripple-directive": "^2.0.1",
+    "vue-route-transition": "^1.1.1",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
